@@ -20,6 +20,10 @@ New Features
   search performance.  This was from Han Jiang's 2012 Google Summer of
   Code project (Han Jiang, Adrien Grand, Robert Muir, Mike McCandless)
 
+* LUCENE-4323: Added support for an absolute maximum CFS segment size
+  (in MiB) to LogMergePolicy and TieredMergePolicy.
+  (Alexey Lef via Uwe Schindler)
+
 API Changes
 
 * LUCENE-4299: Added Terms.hasPositions() and Terms.hasOffsets().
